--- a/Build-deploy-stroke-prediction-model-R.Rmd
+++ b/Build-deploy-stroke-prediction-model-R.Rmd
@@ -1,33 +1,61 @@
 ---
-title: "Build and deploy a stroke prediction model using R"
-date: "`r Sys.Date()`"
+title: "Build and deploy a stroke 
+
+prediction model using R"
+
+date: "`r 2023/11/05()`"
+
 output: html_document
-author: "Put your name!"
+
+author: "Alexander petree"
+
 ---
 
 # About Data Analysis Report
-
-This RMarkdown file contains the report of the data analysis done for the project on building and deploying a stroke prediction model in R. It contains analysis such as data exploration, summary statistics and building the prediction models. The final report was completed on `r date()`. 
+This RMarkdown file contains 
+the report of the data 
+analysis done for the 
+project on building
+and deploying a stroke 
+prediction model in R
+It contains analysis such 
+as data exploration
+summary statistics and 
+building the prediction 
+models The final report
+ was completed on `r 2023/11/05()`. 
 
 **Data Description:**
+According to the World 
+Health Organization WHO
+stroke is the 2nd leading
+cause of death globally responsible for approximately 
+11% of total deaths
+This data set is used 
+to predict whether a patient 
+is likely to get stroke based 
+on the input parameters like gender 
+age 
+various diseases 
+and smoking status Each row 
+in the data provides relevant information about the patient
+---
+# Task One: 
+"Import 
+`r data and data preprocessing
 
-According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately 11% of total deaths.
+# Load data and install packages
 
-This data set is used to predict whether a patient is likely to get stroke based on the input parameters like gender, age, various diseases, and smoking status. Each row in the data provides relevant information about the patient.
-
-
-# Task One: Import data and data preprocessing
-
-## Load data and install packages
-
-```{r}
+```
+{r}
 
 ```
 
 
 ## Describe and explore the data
 
-```{r}
+```
+{r}
 
 ```
 
@@ -35,7 +63,8 @@ This data set is used to predict whether a patient is likely to get stroke based
 
 # Task Two: Build prediction models
 
-```{r}
+```
+{r}
 
 ```
 
@@ -44,7 +73,8 @@ This data set is used to predict whether a patient is likely to get stroke based
 
 # Task Three: Evaluate and select prediction models
 
-```{r}
+```
+{r}
 
 ```
 
@@ -52,7 +82,8 @@ This data set is used to predict whether a patient is likely to get stroke based
 
 # Task Four: Deploy the prediction model
 
-```{r}
+```
+{r}
 
 ```
 
